--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -1,14 +1,19 @@
 package templates
 
 templ header() {
-	<header class="w-full bg-gray-50 dark:bg-gray-900">
-		<nav class="w-full mx-auto flex items-center py-2 px-4">
+	<header class="w-full bg-gray-900 font-mono">
+		<nav class="w-full mx-auto flex items-center py-2 px-4 gap-6">
 			<a class="hover:opacity-90" href="#">
-				<h3 class="font-semibold text-xl text-black dark:text-white font-mono">PLAYGROUND</h3>
+				<h3 class="font-semibold text-xl text-white font-mono">PLAYGROUND</h3>
 			</a>
-			<a href="go">
-				<h3>Go </h3>
-			</a>
+			<div class="w-full flex gap-4">
+				<a href="go" class="text-white">
+					<h3>Go</h3>
+				</a>
+				<a href="cpp" class="text-white">
+					<h3>C++</h3>
+				</a>
+			</div>
 		</nav>
 	</header>
 }
